--- a/src/app/pages/course/create-course/create-course.component.html
+++ b/src/app/pages/course/create-course/create-course.component.html
@@ -23,15 +23,7 @@
               Name</label>
             <div class="col-sm-9">
               <input type="text" formControlName="name" nbInput fullWidth id="courseName" style="font-size: 12.75px;"
-                placeholder="Course Name">
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="courseCordinator" class="label col-sm-3 form-control-label" style="font-size: 12.75px;">Enter
-              Course Cordinator</label>
-            <div class="col-sm-9">
-              <input type="text" formControlName="coordinator" nbInput fullWidth id="courseCordinator"
-                placeholder="Course Cordinator">
+                placeholder="Eg: Grade 11">
             </div>
           </div>
           <div class="form-group row">
